fixed alignment of donate button

--- a/css/custom.less
+++ b/css/custom.less
@@ -86,6 +86,7 @@ section img{
     border-radius: 3px;
     margin-right: 1px;
     margin-left: 21px;
+    line-height: 1.6em;
 }
 
 #donate1{
@@ -129,7 +130,7 @@ section img{
 }
 
 .buttons{
-    line-height:1.4em;
+    line-height:1.5em;
 }
 /* --------------------------- DEVICES ----------------------------------------*/
 article{
